Open up JPMS module required by configuration cache