@@ -181,7 +181,10 @@ fun Test.configureJvmForTest() {
     }
     javaLauncher.set(launcher)
     if (jvmVersionForTest().canCompileOrRun(9) && (isUnitTest() || usesEmbeddedExecuter())) {
+        // TODO: replace all of below with jvmArgs(org.gradle.internal.jvm.JpmsConfiguration.GRADLE_DAEMON_JPMS_JVM_ARGS) once wrapper is updated
         jvmArgs(org.gradle.internal.jvm.GroovyJpmsConfiguration.GROOVY_JPMS_JVM_ARGS)
+        // used by Configuration Cache
+        jvmArgs(listOf("--add-opens", "java.base/java.net=ALL-UNNAMED"))
     }
 }
 
